--- a/php/7.4-apache/Dockerfile
+++ b/php/7.4-apache/Dockerfile
@@ -4,16 +4,14 @@ LABEL vendor="Artifakt" \
       author="djalal@artifakt.io" \
       stage="alpha"
 
-HEALTHCHECK CMD curl --fail http://localhost || exit 1
-
 ARG PHP_EXTENSION_LIST="apcu bcmath bz2 calendar exif gd gettext iconv intl memcache mysqli opcache pcntl pdo_mysql shmop soap sockets sodium sysvmsg sysvsem sysvshm xmlrpc xsl zip"
-
 ARG APACHE_MODULE_LIST="access_compat actions alias allowmethods auth_basic auth_digest authn_anon authn_core authn_dbd authn_dbm authn_file authn_socache authz_core authz_dbd authz_dbm authz_groupfile authz_host authz_owner authz_user autoindex cache cache_disk cache_socache cgi data dav dav_fs dav_lock dbd deflate dir dump_io echo env expires ext_filter filter headers http2 include info lbmethod_bybusyness lbmethod_byrequests lbmethod_bytraffic lbmethod_heartbeat lua macro mime mime_magic negotiation php7 proxy proxy_ajp proxy_balancer proxy_connect proxy_express proxy_fcgi proxy_fdpass proxy_ftp proxy_hcheck proxy_http proxy_scgi proxy_uwsgi proxy_wstunnel remoteip reqtimeout request rewrite setenvif slotmem_plain slotmem_shm socache_dbm socache_memcache socache_shmcb ssl status substitute suexec userdir vhost_alias"
 
-ARG MEMCACHE_VERSION=4.0.5.2
 ARG APCU_VERSION=5.1.19
-ARG LIBSODIUM_VERSION=1.0.18-RELEASE
 ARG COMPOSER_VERSION=2.1.3
+ARG LIBSODIUM_PECL_VERSION=1.0.18-RELEASE
+ARG LIBSODIUM_SYSTEM_VERSION=2.0.23
+ARG MEMCACHE_VERSION=4.0.5.2
 
 # Install dependencies
 # hadolint ignore=DL3008
@@ -87,14 +85,14 @@ RUN rm -f /usr/local/etc/php/conf.d/*sodium.ini \
   && rm -f /usr/local/lib/php/extensions/*/*sodium.so \
   && apt-get remove libsodium* -y  \
   && mkdir -p /tmp/libsodium  \
-  && curl -sL https://github.com/jedisct1/libsodium/archive/${LIBSODIUM_VERSION}.tar.gz | tar xzf - -C  /tmp/libsodium \
-  && cd /tmp/libsodium/libsodium-${LIBSODIUM_VERSION}/ \
+  && curl -sL https://github.com/jedisct1/libsodium/archive/${LIBSODIUM_SYSTEM_VERSION}.tar.gz | tar xzf - -C  /tmp/libsodium \
+  && cd /tmp/libsodium/libsodium-${LIBSODIUM_SYSTEM_VERSION}/ \
   && ./configure \
   && make && make check \
   && make install  \
-  && pecl install -o -f libsodium \
+  && pecl install -o -f libsodium-$LIBSODIUM_PECL_VERSION \
   && rm -rf /tmp/libsodium
-  
+
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl -sS https://getcomposer.org/installer | \
   php -- --version=${COMPOSER_VERSION} --install-dir=/usr/local/bin --filename=composer
@@ -110,5 +108,6 @@ COPY zzz-artifakt.ini $PHP_INI_DIR/conf.d/zzz-artifakt.ini
 # hadolint ignore=DL3045
 COPY docker-entrypoint.sh /usr/local/bin/
 
+HEALTHCHECK CMD curl --fail http://localhost || exit 1
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 CMD ["apache2-foreground"]
