--- a/magento/2.4/etc/php-fpm.ini
+++ b/magento/2.4/etc/php-fpm.ini
@@ -1,4 +1,4 @@
-memory_limit = 768M ; Variable: PHP_MEMORY_LIMIT
+memory_limit = _PHP_MEMORY_LIMIT_ ; Variable: PHP_MEMORY_LIMIT
 max_execution_time = 600
 zlib.output_compression = On
 cgi.fix_pathinfo = 0
@@ -16,8 +16,8 @@ opcache.save_comments=1
 opcache.fast_shutdown=0
 opcache.blacklist_filename=/usr/local/etc/php/opcache.exclusion
 
-upload_max_filesize = 24M ; Variable: UPLOAD_MAX_FILESIZE
-post_max_size = 24M ; Variable: UPLOAD_MAX_FILESIZE
+upload_max_filesize = _UPLOAD_MAX_FILESIZE_ ; Variable: UPLOAD_MAX_FILESIZE
+post_max_size = _UPLOAD_MAX_FILESIZE_ ; Variable: UPLOAD_MAX_FILESIZE
 max_input_vars = 10000
 
 expose_php = Off
