--- a/python/3.9/test.yaml
+++ b/python/3.9/test.yaml
@@ -14,4 +14,4 @@ commandTests:
   - name: "pip version"
     command: "pip"
     args: [ "-V"]
-    expectedOutput: ['.*21\.2\.*']
+    expectedOutput: ['.*22\.*']
